@startuml

abstract class Entry {
  -name:String
  getName():String
  {abstract} getSize():int
  toString():String
  pathName():String
}

Entry --> Folder : parent

class Folder {
  getSize():int
  toString():String
  add(e :Entry)
}

class File {
  -size:int
  getSize():int
}

Folder *-- "*" Entry : -entries
Entry <|-- File
Entry <|-- Folder :"     "

class Link {
  getSize():int
  toString():String
}
Entry <|-- Link
Entry <-- Link :source

@enduml